@@ -115,11 +115,18 @@ hiroshi . kimura . 0331 @ gmail . com, ~a,
   (query-list sql3 "select distinct(date) from mac_addrs order by date desc"))
 
 (define (wifi->name wifi)
-  (query-list sql3 "select name from users where wifi=$1" wifi))
+  (first (query-list sql3 "select name from users where wifi=$1" wifi)))
 
-;; 2019-04-10
-(define (wifi->jname wifi)
-  (query-list sql3 "select jname from users where wifi=$1" wifi))
+(define *name-jname*
+  (query-rows sql3 "select name,jname from users"))
+
+;; continuation!
+(define (j name)
+  (call/cc
+   (lambda (return)
+     (for ([pair *name-jname*])
+       (when (string=? name (vector-ref pair 0))
+         (return (vector-ref pair 1)))))))
 
 ;;;
 ;;; end points
@@ -168,18 +175,17 @@ hiroshi . kimura . 0331 @ gmail . com, ~a,
           (displayln "</table>")
           (displayln "<p><input type='submit' class='btn btn-primary' value='add'></p>")
           (displayln "</form>"))))))
-
+;jname
 (get "/users"
   (lambda (req)
     (html
      (with-output-to-string
        (lambda ()
          (displayln "<ul>")
-         ;; 2019-04-10
-         (for ([u (query-list sql3 "select jname from users")])
+         (for ([u (query-list sql3 "select name from users")])
            (displayln (format "<li class='~a'><a href='/user/~a'>~a</a></li>"
                               (if (status? u) "red" "black")
-                              u u)))
+                              u (j u))))
          (displayln "</ul>")
          (displayln
           "<p>[ <a href='/list'>list</a> | <a href='/users/new'>add user</a> ]</p>"))))))
@@ -216,7 +222,7 @@ hiroshi . kimura . 0331 @ gmail . com, ~a,
                 (display "</p>")
                 (loop (filter (lambda (s) (string<? (date s) (first-date ret))) ret))))))))))
 
-;;2019-04-10, jname
+;;2019-04-10, j
 (get "/list"
      (lambda (req)
        (let ((users (users-wifi))
@@ -228,7 +234,7 @@ hiroshi . kimura . 0331 @ gmail . com, ~a,
               (display "<table>")
               (display "<tr><th></th>")
               (for ([u users])
-                (display (format "<td>~a</td>" (wifi->jname u))))
+                (display (format "<td> ~a, </td>" (j (wifi->name u)))))
               (display "</tr>")
               (for ([d dates])
                 (let ((st
