@@ -1,8 +1,14 @@
+2019-04-10  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
+
+	* who-is-on-app.rkt: *name-jname* 辞書
+	* call/cc 初利用！(j name)
+	* アップデート (get "/list")
+
 2019-04-09  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
 	* 0.10.1
 	* Makefile: install weekday.rkt
-	
+
 	* 0.10
 	* weekday.rkt: merged.
 
